@@ -22,6 +22,7 @@ MA 02110-1301, USA. */
 #include <stdio.h>
 #include <string.h>
 #include <limits.h>
+#include <locale.h>
 
 #include "mpfr-impl.h"
 
@@ -83,7 +84,7 @@ mpfr_out_str (FILE *stream, int base, size_t n_digits, mpfr_srcptr op,
 
   /* outputs mantissa */
   fputc (*s++, stream); e--; /* leading digit */
-  fputc ('.', stream);       /* decimal point */
+  fputc (MPFR_DECIMAL_POINT, stream);
   fputs (s, stream);         /* rest of mantissa */
   (*__gmp_free_func) (s0, l);
 
